{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 68,
  "lineage": "b6e842e5-699e-bbae-ce1f-453f30bfb612",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:443370672908:security-group/sg-0ce0d967b89e605fe",
            "description": "Allow SSH, HTTP, HTTPS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ce0d967b89e605fe",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20241229172803261900000002",
            "name_prefix": "terraform-",
            "owner_id": "443370672908",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "MySecurityGroup"
            },
            "tags_all": {
              "Name": "MySecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-045d73b001f79540b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0866a3c8686eaeeba",
            "arn": "arn:aws:ec2:us-east-1:443370672908:instance/i-00aee74cb140da882",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00aee74cb140da882",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "H_Work22",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b2f9638fd37ce372",
            "private_dns": "ip-10-0-20-73.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.20.73",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05c3ec086ad0383f7",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0ce0d967b89e605fe"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03d3e65f15f01717a",
            "tags": {
              "Name": "PrivateInstance"
            },
            "tags_all": {
              "Name": "PrivateInstance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ce0d967b89e605fe"
            ]
          },
          "dependencies": [
            "aws_security_group.my_sg",
            "data.aws_availability_zones.available",
            "module.subnet.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0866a3c8686eaeeba",
            "arn": "arn:aws:ec2:us-east-1:443370672908:instance/i-0f916ec9b9cb27003",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f916ec9b9cb27003",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "H_Work22",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a896a25b8a5b2491",
            "private_dns": "ip-10-0-10-229.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.229",
            "public_ip": "34.229.150.223",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0bc1eb893fa5d99b7",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0ce0d967b89e605fe"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-084e61130802e1018",
            "tags": {
              "Name": "PublicInstance"
            },
            "tags_all": {
              "Name": "PublicInstance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ce0d967b89e605fe"
            ]
          },
          "dependencies": [
            "aws_security_group.my_sg",
            "data.aws_availability_zones.available",
            "module.subnet.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:443370672908:subnet/subnet-03d3e65f15f01717a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d3e65f15f01717a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "443370672908",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PrivateSubnet"
            },
            "tags_all": {
              "Name": "PrivateSubnet"
            },
            "vpc_id": "vpc-045d73b001f79540b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:443370672908:subnet/subnet-084e61130802e1018",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-084e61130802e1018",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "443370672908",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet"
            },
            "tags_all": {
              "Name": "PublicSubnet"
            },
            "vpc_id": "vpc-045d73b001f79540b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:443370672908:internet-gateway/igw-0ddb07b51a0e74f95",
            "id": "igw-0ddb07b51a0e74f95",
            "owner_id": "443370672908",
            "vpc_id": "vpc-045d73b001f79540b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ddb07b51a0e74f95",
            "id": "r-rtb-073d9cce54c76a4011080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-073d9cce54c76a401",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.rt",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:443370672908:route-table/rtb-073d9cce54c76a401",
            "id": "rtb-073d9cce54c76a401",
            "owner_id": "443370672908",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "PublicRouteTable"
            },
            "tags_all": {
              "Name": "PublicRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-045d73b001f79540b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:443370672908:vpc/vpc-045d73b001f79540b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0510a1cda35359191",
            "default_route_table_id": "rtb-0ad535a02a520981c",
            "default_security_group_id": "sg-00de8c68dad834246",
            "dhcp_options_id": "dopt-0f0fb78e0397cb9b9",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-045d73b001f79540b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ad535a02a520981c",
            "owner_id": "443370672908",
            "tags": {
              "Name": "MyVPC"
            },
            "tags_all": {
              "Name": "MyVPC"
            }
          }
        }
      ]
    }
  ]
}